<resources>
    <string name="_new">new</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_preference_title">About</string>
    <string name="access_denied">Access denied</string>
    <string name="action_already_disabled">Already Disabled</string>
    <string name="action_already_granted">Already Granted</string>
    <string name="action_autofill_password">Autofill password</string>
    <string name="action_backup_storage">Backup</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_copy">Copy</string>
    <string name="action_create_dynamic_shortcuts">Create Shortcuts</string>
    <string name="action_create_named_session_confirm">Create</string>
    <string name="action_disable_battery_optimizations">Disable Battery Optimizations</string>
    <string name="action_disable_launcher_icon">Disable Launcher Icon</string>
    <string name="action_enable_launcher_icon">Enable Launcher Icon</string>
    <string name="action_exit">Exit</string>
    <string name="action_file_received_edit">Edit</string>
    <string name="action_file_received_open_directory">Open directory</string>
    <string name="action_grant">Grant</string>
    <string name="action_grant_display_over_other_apps_permission">Grant Draw Over Apps Permission</string>
    <string name="action_grant_storage_permission">Grant Storage Permission</string>
    <string name="action_kill_process">Kill process (%d)</string>
    <string name="action_new_session">New session</string>
    <string name="action_new_session_failsafe">Failsafe</string>
    <string name="action_no">No</string>
    <string name="action_open_help">Help</string>
    <string name="action_open_settings">Settings</string>
    <string name="action_recover_storage">Recovery</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_refresh_all_widgets">Refresh Widgets</string>
    <string name="action_remove_dynamic_shortcuts">Remove Shortcuts</string>
    <string name="action_rename_session_confirm">Set</string>
    <string name="action_report_issue">Report Issue</string>
    <string name="action_reset_terminal">Reset</string>
    <string name="action_retry">Retry</string>
    <string name="action_save_to_file">Save To File</string>
    <string name="action_select_url">Select URL</string>
    <string name="action_share">Share</string>
    <string name="action_share_selected_text">Share selected text</string>
    <string name="action_share_transcript">Share transcript</string>
    <string name="action_style_terminal">Style</string>
    <string name="action_styling_install">Install</string>
    <string name="action_toggle_keep_screen_on">Keep screen on</string>
    <string name="action_toggle_soft_keyboard">Keyboard</string>
    <string name="action_toggle_tool_box">Toolbox</string>
    <string name="action_toggle_tool_box2">START</string>
    <string name="action_yes">Yes</string>
    <string name="add">Add</string>
    <string name="add_button">add key</string>
    <string name="add_menu_item">add some item to float ball menu</string>
    <string name="advanced">Advanced</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Termux:Widget</string>
    <string name="app_settings_title">Settings for %s</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application_name">XoDos</string>
    <string name="apply_display_over_other_app_permission">apply display over other permission first</string>
    <string name="apply_permission">Failed to enter the settings page, please set it manually</string>
    <string name="applying_settings">Applying settings...</string>
    <string name="arch">Arch</string>
    <string name="audio_driver">Audio Driver</string>
    <string name="audio_file">Audio File: %s</string>
    <string name="audio_files">Audio Files</string>
    <string name="back">⬅ Back</string>
    <string name="background">Background</string>
    <string name="binding">Binding</string>
    <string name="binding_down">Binding Down</string>
    <string name="binding_left">Binding Left</string>
    <string name="binding_right">Binding Right</string>
    <string name="binding_up">Binding Up</string>
    <string name="bindings">bindings</string>
    <string name="bionic">🍷bionic</string>
    <string name="bootstrap_error_abort">Abort</string>
    <string name="bootstrap_error_body">XoDos was unable to install the bootstrap packages.</string>
    <string name="bootstrap_error_installed_on_portable_sd">"XoDos cannot be installed on portable/external/removable sd card on your device.  Bootstrap binaries compiled for  have hardcoded $PREFIX path and cannot be installed under any path other than:%1$s."</string>
    <string name="bootstrap_error_not_primary_user_message">"XoDos can only be run as the primary user. Bootstrap binaries compiled for  have hardcoded $PREFIX path and cannot be installed  under any path other than:%1$s."</string>
    <string name="bootstrap_error_title">Installation Error</string>
    <string name="bootstrap_error_try_again">Try again</string>
    <string name="bootstrap_initializing">Initializing Termux environment...</string>
    <string name="bootstrap_installer_body">Initializing environment...</string>
    <string name="bootstrap_installer_title">Installing Termux</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="box64_preset">Box64 Preset</string>
    <string name="box64_version">Box64 Version</string>
    <string name="box86_64_env_var_help__dynarec_bigblock">"Dynarec building BigBlock&lt;br />&lt;br /> &lt;b>0&lt;/b> : Don't try to build block as big as possible&lt;br /> &lt;b>1&lt;/b> : Build Dynarec block as big as possible&lt;br /> &lt;b>2&lt;/b> : Build Dynarec block bigger (continue when block overlaps, but only for blocks in elf memory)&lt;br /> &lt;b>3&lt;/b> : Build Dynarec block bigger (continue when block overlaps, for all types of memory)"</string>
    <string name="box86_64_env_var_help__dynarec_callret">Optimization of CALL/RET opcodes</string>
    <string name="box86_64_env_var_help__dynarec_fastnan">Generation of -NAN like on x86</string>
    <string name="box86_64_env_var_help__dynarec_fastround">Generation of precise x86 rounding</string>
    <string name="box86_64_env_var_help__dynarec_forward">Defines the max allowed forward value when building Block</string>
    <string name="box86_64_env_var_help__dynarec_safeflags">Handling of flags on CALL/RET opcodes&lt;br />&lt;br /> &lt;b>0&lt;/b> : Treats CALL/RET as if it never needed flags (faster, unstable)&lt;br /> &lt;b>1&lt;/b> : Most RET will need flags, most CALLS will not&lt;br /> &lt;b>2&lt;/b> : All CALL/RET will need flags (slower)</string>
    <string name="box86_box64">Box86/Box64</string>
    <string name="box86_preset">Box86 Preset</string>
    <string name="csmt">CSMT (Command Stream Multi-Thread)</string>
    <string name="desktop">Desktop</string>
    <string name="drives">Drives</string>
    <string name="dxwrapper">DX Wrapper</string>
    <string name="environment_variables">Environment Variables</string>
    <string name="executable_file">executable file</string>
    <string name="frame_rate">Frame Rate</string>
    <string name="gpu_name">GPU Name</string>
    <string name="graphics_driver">Graphics Driver</string>
    <string name="height">Height</string>
    <string name="letter">Letter</string>
    <string name="max_device_memory">Max Device Memory</string>
    <string name="mouse_warp_override">Mouse Warp Override</string>
    <string name="name">Name</string>
    <string name="no_items_to_display">No items to display</string>
    <string name="offscreen_rendering_mode">Offscreen Rendering Mode</string>
    <string name="ok">OK</string>
    <string name="processor_affinity">Processor Affinity</string>
    <string name="registry_keys">Registry Keys</string>
    <string name="screen_size">Screen Size</string>
    <string name="show_fps">Show FPS</string>
    <string name="stop_services_on_startup">Stop services on startup</string>
    <string name="strict_shader_math">Strict Shader Math</string>
    <string name="system">System</string>
    <string name="target_path">Target Path</string>
    <string name="theme">Theme</string>
    <string name="title">title</string>
    <string name="touchpad_help_main_menu_description">Four fingers tap</string>
    <string name="touchpad_help_main_menu_title">Main Menu</string>
    <string name="touchpad_help_mouse_left_click_description">Short tap with one finger</string>
    <string name="touchpad_help_mouse_left_click_title">Mouse Left-Click</string>
    <string name="touchpad_help_mouse_right_click_description">Tap with one finger and short tap with another finger</string>
    <string name="touchpad_help_mouse_right_click_title">Mouse Right-Click</string>
    <string name="touchpad_help_mouse_scroll_wheel_description">Two fingers tap and move</string>
    <string name="touchpad_help_mouse_scroll_wheel_title">Mouse Scroll Wheel</string>
    <string name="version">Version</string>
    <string name="video_memory_size">Video Memory Size</string>
    <string name="width">Width</string>
    <string name="win_components">Win Components</string>
    <string name="wine_configuration">Wine Configuration</string>
    <string name="wine_version">Wine Version</string>
</resources>