<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/name" />
            <EditText android:id="@id/ETName" android:inputType="textCapSentences" style="@style/EditText" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/screen_size" />
                    <Spinner android:entries="@array/screen_size_entries" android:id="@id/SScreenSize" android:layout_width="fill_parent" style="@style/ComboBox" />
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:id="@id/LLCustomScreenSize" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/width" />
                        <EditText android:id="@id/ETScreenWidth" android:layout_width="78.0dip" android:inputType="number" style="@style/EditText" />
                    </LinearLayout>
                    <TextView android:textSize="18.0dip" android:textStyle="bold" android:layout_gravity="bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:layout_marginRight="2.0dip" android:layout_marginBottom="4.0dip" android:text="x" />
                    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/height" />
                        <EditText android:id="@id/ETScreenHeight" android:layout_width="78.0dip" android:inputType="number" style="@style/EditText" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/LLWineVersion" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wine_version" />
                <Spinner android:id="@id/SWineVersion" android:layout_width="fill_parent" style="@style/ComboBox" />
            </LinearLayout>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/graphics_driver" />
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <Spinner android:entries="@array/graphics_driver_entries" android:id="@id/SGraphicsDriver" android:layout_width="0.0dip" android:layout_weight="1.0" style="@style/ComboBox" />
                <ImageButton android:id="@id/BTGraphicsDriverConfig" android:visibility="gone" android:src="@drawable/icon_settings" style="@style/ListMenuButton" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dxwrapper" />
                <ImageView android:id="@id/BTHelpDXWrapper" style="@style/HelpButton" />
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <Spinner android:entries="@array/dxwrapper_entries" android:id="@id/SDXWrapper" android:layout_width="0.0dip" android:layout_weight="1.0" style="@style/ComboBox" />
                <ImageButton android:id="@id/BTDXWrapperConfig" android:visibility="gone" android:src="@drawable/icon_settings" style="@style/ListMenuButton" />
            </LinearLayout>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/audio_driver" />
            <Spinner android:entries="@array/audio_driver_entries" android:id="@id/SAudioDriver" android:layout_width="fill_parent" style="@style/ComboBox" />
            <CheckBox android:id="@id/CBShowFPS" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/show_fps" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/processor_affinity" />
            <com.termux.x11.controller.widget.CPUListView android:gravity="center_horizontal" android:id="@id/CPUListView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" />
            <com.google.android.material.tabs.TabLayout android:id="@id/TabLayout" android:background="@drawable/tab_layout_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginBottom="4.0dip" app:tabGravity="center" app:tabMode="auto">
                <com.google.android.material.tabs.TabItem android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/wine_configuration" />
                <com.google.android.material.tabs.TabItem android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/win_components" />
                <com.google.android.material.tabs.TabItem android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/environment_variables" />
                <com.google.android.material.tabs.TabItem android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/drives" />
                <com.google.android.material.tabs.TabItem android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/advanced" />
            </com.google.android.material.tabs.TabLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/LLTabWineConfiguration" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
                    <LinearLayout style="@style/FieldSet">
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/theme" />
                        <Spinner android:entries="@array/desktop_theme_entries" android:id="@id/SDesktopTheme" android:layout_width="fill_parent" style="@style/ComboBox" />
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/background" />
                        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                            <Spinner android:entries="@array/desktop_background_type_entries" android:id="@id/SDesktopBackgroundType" android:layout_width="0.0dip" android:layout_weight="1.0" style="@style/ComboBox" />
                            <com.termux.x11.controller.widget.ColorPickerView android:id="@id/CPVDesktopBackgroundColor" android:visibility="gone" android:layout_width="84.0dip" android:layout_height="wrap_content" />
                            <com.termux.x11.controller.widget.ImagePickerView android:id="@id/IPVDesktopBackgroundImage" android:visibility="gone" android:layout_width="84.0dip" android:layout_height="wrap_content" />
                        </LinearLayout>
                    </LinearLayout>
                    <TextView android:text="@string/desktop" style="@style/FieldSetLabel" />
                </FrameLayout>
                <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <LinearLayout style="@style/FieldSet">
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/csmt" />
                        <Spinner android:id="@id/SCSMT" android:layout_width="fill_parent" style="@style/ComboBox" />
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gpu_name" />
                        <Spinner android:id="@id/SGPUName" android:layout_width="fill_parent" style="@style/ComboBox" />
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/offscreen_rendering_mode" />
                        <Spinner android:id="@id/SOffscreenRenderingMode" android:layout_width="fill_parent" style="@style/ComboBox" />
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/strict_shader_math" />
                        <Spinner android:id="@id/SStrictShaderMath" android:layout_width="fill_parent" style="@style/ComboBox" />
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/video_memory_size" />
                        <Spinner android:entries="@array/video_memory_size_entries" android:id="@id/SVideoMemorySize" android:layout_width="fill_parent" style="@style/ComboBox" />
                        <View style="@style/FieldSeparator" />
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mouse_warp_override" />
                        <Spinner android:id="@id/SMouseWarpOverride" android:layout_width="fill_parent" style="@style/ComboBox" />
                    </LinearLayout>
                    <TextView android:text="@string/registry_keys" style="@style/FieldSetLabel" />
                </FrameLayout>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/LLTabWinComponents" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <LinearLayout android:orientation="vertical" android:id="@id/LLTabEnvVars" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:orientation="vertical" android:id="@id/LLEnvVars" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                <TextView android:gravity="center" android:id="@id/TVEnvVarsEmptyText" android:padding="16.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/no_items_to_display" />
                <View style="@style/HorizontalLine" />
                <Button android:layout_gravity="center_horizontal" android:id="@id/BTAddEnvVar" android:layout_width="160.0dip" android:layout_height="wrap_content" android:text="@string/add" style="@style/ButtonNeutral" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/LLTabDrives" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:orientation="horizontal" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="4.0dip">
                    <TextView android:layout_width="100.0dip" android:layout_height="wrap_content" android:text="@string/letter" />
                    <TextView android:layout_width="100.0dip" android:layout_height="wrap_content" android:text="@string/target_path" />
                </LinearLayout>
                <LinearLayout android:orientation="vertical" android:id="@id/LLDrives" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                <TextView android:gravity="center" android:id="@id/TVDrivesEmptyText" android:padding="16.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/no_items_to_display" />
                <View style="@style/HorizontalLine" />
                <Button android:layout_gravity="center_horizontal" android:id="@id/BTAddDrive" android:layout_width="160.0dip" android:layout_height="wrap_content" android:text="@string/add" style="@style/ButtonNeutral" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/LLTabAdvanced" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
                    <LinearLayout style="@style/FieldSet">
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/box86_preset" />
                        <Spinner android:id="@id/SBox86Preset" android:layout_width="fill_parent" style="@style/ComboBox" />
                        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/box64_preset" />
                        <Spinner android:id="@id/SBox64Preset" android:layout_width="fill_parent" style="@style/ComboBox" />
                    </LinearLayout>
                    <TextView android:text="@string/box86_box64" style="@style/FieldSetLabel" />
                </FrameLayout>
                <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
                    <LinearLayout style="@style/FieldSet">
                        <CheckBox android:id="@id/CBStopServicesOnStartup" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/stop_services_on_startup" />
                    </LinearLayout>
                    <TextView android:text="@string/system" style="@style/FieldSetLabel" />
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton android:layout_gravity="bottom|center|right" android:id="@id/BTConfirm" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="16.0dip" android:src="@drawable/icon_confirm" android:tint="#ffffffff" />
</FrameLayout>