<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="wrap_content" android:layout_height="240.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="350.0dip" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <ImageView android:layout_width="100.0dip" android:layout_height="50.0dip" android:layout_marginRight="8.0dip" android:src="@drawable/touchpad_help_mouse_left_click" />
            <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/touchpad_help_mouse_left_click_title" />
                <TextView android:textColor="#ff757575" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/touchpad_help_mouse_left_click_description" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
            <ImageView android:layout_width="100.0dip" android:layout_height="50.0dip" android:layout_marginRight="8.0dip" android:src="@drawable/touchpad_help_mouse_right_click" />
            <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/touchpad_help_mouse_right_click_title" />
                <TextView android:textColor="#ff757575" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/touchpad_help_mouse_right_click_description" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
            <ImageView android:layout_width="100.0dip" android:layout_height="50.0dip" android:layout_marginRight="8.0dip" android:src="@drawable/touchpad_help_mouse_scroll_wheel" />
            <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/touchpad_help_mouse_scroll_wheel_title" />
                <TextView android:textColor="#ff757575" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/touchpad_help_mouse_scroll_wheel_description" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
            <ImageView android:layout_width="100.0dip" android:layout_height="50.0dip" android:layout_marginRight="8.0dip" android:src="@drawable/touchpad_help_main_menu" />
            <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/touchpad_help_main_menu_title" />
                <TextView android:textColor="#ff757575" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/touchpad_help_main_menu_description" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>