<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/id_binding_launch_item" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/LConfigStartItems" android:layout_width="250.0dip" android:layout_height="wrap_content">
        <EditText android:id="@id/ETCommand" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/executable_file" android:maxLines="1" />
        <ImageButton android:id="@id/BConfig_item" android:background="@drawable/ic_file_browser_shape" android:layout_width="wrap_content" android:layout_height="40.0dip" android:layout_marginTop="10.0dip" />
        <EditText android:id="@id/ETTitle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/title" android:maxLines="1" />
        <Button android:id="@id/BTOK" android:background="@drawable/icon_button_click" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ok" />
    </LinearLayout>
</LinearLayout>